Capa de persistencia de categorías

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=crud
 server.port=4000
 spring.datasource.url=jdbc:mysql://localhost:3306/c17-53-n-java
 spring.datasource.username=root
-spring.datasource.password=raul450567
+spring.datasource.password=2004
 spring.jpa.hibernate.ddl-auto=update
