--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=crud
 server.port=4000
-
+spring.datasource.url=jdbc:mysql://35.88.142.180:3306/c17-53-n-java
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
