--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
-## spring.application.name=crud
-## server.port=4000
-## spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:26886/railway
-## spring.datasource.username=root
-## spring.datasource.password=NoNgqEsfETqwoWOpbiYeSlMptWXFJReQ
-## spring.jpa.hibernate.ddl-auto=update
+# spring.application.name=crud
+# server.port=4000
+# spring.datasource.url=jdbc:mysql://localhost:3306/c17-53-n-java
+# spring.datasource.username=root
+# spring.datasource.password=2004
+# spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url = jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 # Show or not log for each sql query
